# gamma-io

./: .gitignore  .pdm-python  .pre-commit-config.yaml  Makefile  README.md  config  gamma-cli-install  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build-deploy.yaml
gamma/io/: __init__.py  __version__.py  _arrow.py  _core.py  _dataset.py  _fs.py  _import_utils.py  _logging.py  _pandas.py  _polars.py  _sql.py  _types.py  _utils.py  config.py  read.py  scaffold.py  types.py
gamma/io/catalog/: __init__.py  config.py  dataset.py
gamma/io/fs/: __init__.py  config.py  core.py  ops.py  s3fs.py
gamma/io/scaffold_sample/: 20-filesystems.yaml
notebooks/: sample-read-write.ipynb
samples/: customers.sql
tests/gamma/io/: common.py  conftest.py  test_core.py  test_dataframes.py  test_dataset.py  test_pandas.py  test_polars.py  test_s3.py  test_sql.py  test_staging.py  test_utils.py
tests/gamma/io/catalog/: __init__.py  config.yaml  test_basic_datasets.py
tests/gamma/io/fs/: common.py  config.yaml  conftest.py  fixtures.py  test_local.py  test_s3.py
tests/gamma/io/sample/: 00-meta.yaml  20-datasets.yaml  config.yaml
