[project]
name = "gamma-io"
dynamic = ["version"]
description = "Extensible library for interacting with datasets in data intensive projects"
authors = [{ name = "Cloves Almeida", email = "almeida.cloves@bcg.com" }]
dependencies = [
    "click>=7",
    "tqdm",
    "pandas>=2",
    "pyarrow>=12",
    "pydantic>=2",
    "fsspec>=2023",
    "decorator>=4",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }


[project.optional-dependencies]
polars = ["polars>=0.18"]
full = [
    "polars>=0.18",
    "gamma-config>=0.7",
    "s3fs>=2023",
    "sqlalchemy>=2",
    "jinja2>=2",
]
aws = ["s3fs>=2023"]
sql = ["sqlalchemy>=2"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "openpyxl",
    "localstack",
    "sqlalchemy-utils",
    "boto3"
]

publish = ["twine"]

dev = [
    "pre-commit",
    "black",
    "ipython",
    "jupyterlab",
    "isort",
    "ruff",
    "ipykernel",
    "pdbpp",
    "localstack",
    "awscli-local"
]

[tool.isort]
profile = "black"

[tool.ruff]
src = ["gamma"]
select = ["E", "F", "D"]
ignore = ["F811"]
exclude = ["tests"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--import-mode importlib --cov=gamma.io --cov-report term --cov-report xml:cov.xml"
testpaths = "tests"

[tool.pdm.version]
source = "file"
path = "gamma/io/__version__.py"

[tool.pdm.build]
includes = ["gamma/io"]
