[metadata]
name = gamma-io
version = attr: gamma.io.__version__
description = Data I/O and catalog library
long_description = file: README.md
license = Proprietary
author = Cloves Almeida
author-email = almeida.cloves@bcg.com
url = https://github.gamma.bcg.com/BCG/gamma-io
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find_namespace:
install_requires =
    gamma-config >=0.4
    fsspec >=0.9,<1.0

[options.packages.find]
include = gamma*

[options.package_data]
gamma.io.config = *,**/*

[options.entry_points]
gamma.config.scaffold =
    gamma-io = gamma.io.scaffold:setup

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:gamma/io/__init__.py]

[flake8]
exclude = docs,.git,tmp,.venv,build,dist
max-line-length = 88
extend-ignore = F811

[tool:pytest]
addopts = --cov=gamma --cov-report term --cov-report xml:cov.xml -m "not integration"
testpaths = tests
markers =
  minio: S3 tests using minio
  integration: integration tests
